tests/fixtures/invalid/bin_str.py
# Cannot call bin() with Str
x = bin("hello")
